fixed spacing of links in full mode

--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -7,7 +7,7 @@
   // display: none;
   cursor: pointer;
   display: flex;
-  justify-content: flex-end;
+  //justify-content: flex-end;
   align-content: center;
 
   &__link {
@@ -18,7 +18,7 @@
     border: 0;
 
     @include breakpoint($bp-nav-big) {
-      padding: .5em 1em;
+      padding: .5em .75em;
     }
 
     &:hover {
